--- a/_sass/ext/_solarized-light.scss
+++ b/_sass/ext/_solarized-light.scss
@@ -5,7 +5,7 @@ SOLARIZED HEX      ROLE
 --------- -------- ------------------------------------------
 base01    #586e75  body text / default code / primary content
 base1     #93a1a1  comments / secondary content
-base3     #fdf6e3  background
+base3     #f1c40f  background
 orange    #cb4b16  constants
 red       #dc322f  regex, special keywords
 blue      #268bd2  reserved keywords
